--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,11 @@
 {
 	"useTabs": true,
-	"singleQuote": true,
+	"singleQuote": false,
+	"tabWidth": 4,
 	"trailingComma": "none",
 	"printWidth": 100,
 	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+	"bracketSameLine": true,
 	"overrides": [
 		{
 			"files": "*.svelte",
