--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "autoprefixer": "^10.4.20",
+    "bits-ui": "^1.0.0-next.74",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.22.0",
     "eslint": "^9.7.0",
@@ -44,6 +45,9 @@
   "dependencies": {
     "@libsql/client": "^0.9.0",
     "@tailwindcss/typography": "^0.5.15",
-    "drizzle-orm": "^0.33.0"
+    "@vercel/analytics": "^1.4.1",
+    "drizzle-orm": "^0.33.0",
+    "gsap": "^3.12.5",
+    "lucide-svelte": "^0.469.0"
   }
 }
