--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@libsql/client": "^0.9.0",
+    "@sveltejs/adapter-vercel": "^5.5.2",
     "@tailwindcss/typography": "^0.5.15",
     "@vercel/analytics": "^1.4.1",
     "drizzle-orm": "^0.33.0",
