--- a/.prettierrc
+++ b/.prettierrc
@@ -10,7 +10,8 @@
         {
             "files": "*.svelte",
             "options": {
-                "parser": "svelte"
+                "parser": "svelte",
+                "tabWidth": 2
             }
         }
     ]
