--- a/package.json
+++ b/package.json
@@ -16,39 +16,39 @@
         "db:studio": "drizzle-kit studio"
     },
     "devDependencies": {
-        "@eslint/compat": "^1.2.3",
-        "@sveltejs/adapter-auto": "^3.0.0",
-        "@sveltejs/kit": "^2.0.0",
-        "@sveltejs/vite-plugin-svelte": "^4.0.0",
+        "@eslint/compat": "^1.2.7",
+        "@sveltejs/adapter-auto": "^3.3.1",
+        "@sveltejs/kit": "^2.17.3",
+        "@sveltejs/vite-plugin-svelte": "^4.0.4",
         "autoprefixer": "^10.4.20",
-        "bits-ui": "^1.0.0-next.74",
+        "bits-ui": "^1.3.4",
         "clsx": "^2.1.1",
-        "drizzle-kit": "^0.22.0",
-        "eslint": "^9.7.0",
+        "drizzle-kit": "^0.22.8",
+        "eslint": "^9.21.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-svelte": "^2.36.0",
-        "globals": "^15.0.0",
+        "eslint-plugin-svelte": "^2.46.1",
+        "globals": "^15.15.0",
         "mdsvex": "^0.11.2",
-        "prettier": "^3.3.2",
-        "prettier-plugin-svelte": "^3.2.6",
-        "prettier-plugin-tailwindcss": "^0.6.5",
-        "svelte": "^5.0.0",
-        "svelte-check": "^4.0.0",
+        "prettier": "^3.5.2",
+        "prettier-plugin-svelte": "^3.3.3",
+        "prettier-plugin-tailwindcss": "^0.6.11",
+        "svelte": "^5.20.5",
+        "svelte-check": "^4.1.4",
         "tailwind-merge": "^2.6.0",
-        "tailwind-variants": "^0.3.0",
-        "tailwindcss": "^3.4.9",
+        "tailwind-variants": "^0.3.1",
+        "tailwindcss": "^3.4.17",
         "tailwindcss-animate": "^1.0.7",
-        "typescript": "^5.0.0",
-        "typescript-eslint": "^8.0.0",
+        "typescript": "^5.7.3",
+        "typescript-eslint": "^8.25.0",
         "vite": "^5.4.11"
     },
     "dependencies": {
         "@libsql/client": "^0.9.0",
-        "@sveltejs/adapter-vercel": "^5.5.2",
-        "@tailwindcss/typography": "^0.5.15",
-        "@vercel/analytics": "^1.4.1",
+        "@sveltejs/adapter-vercel": "^5.6.3",
+        "@tailwindcss/typography": "^0.5.16",
+        "@vercel/analytics": "^1.5.0",
         "drizzle-orm": "^0.33.0",
-        "gsap": "^3.12.5",
+        "gsap": "^3.12.7",
         "lucide-svelte": "^0.469.0"
     }
 }
