--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "@sveltejs/kit": "^2.17.3",
         "@sveltejs/vite-plugin-svelte": "^4.0.4",
         "autoprefixer": "^10.4.20",
-        "bits-ui": "^1.3.4",
+        "bits-ui": "^1.4.7",
         "clsx": "^2.1.1",
         "drizzle-kit": "^0.22.8",
         "eslint": "^9.21.0",
@@ -35,7 +35,7 @@
         "svelte": "^5.20.5",
         "svelte-check": "^4.1.4",
         "tailwind-merge": "^2.6.0",
-        "tailwind-variants": "^0.3.1",
+        "tailwind-variants": "^0.2.1",
         "tailwindcss": "^3.4.17",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.7.3",
@@ -49,6 +49,7 @@
         "@vercel/analytics": "^1.5.0",
         "drizzle-orm": "^0.33.0",
         "gsap": "^3.12.7",
-        "lucide-svelte": "^0.469.0"
+        "lucide-svelte": "^0.469.0",
+        "shiki": "^3.8.1"
     }
 }
